Fixed the overflow issue
Used a magicBox, which resulted in me using the div as a mask kinda thing, by having an extra div inside. Src = https://forum.webflow.com/t/overflow-hidden-not-working-for-absolute-right-positioned-element/67596/14

--- a/css/master.css
+++ b/css/master.css
@@ -18,6 +18,7 @@ body {
 }
 
 .navFlex {
+  overflow-x: hidden;
   background-color: #002F67;
   display: flex;
   width: 100vw;
@@ -44,10 +45,15 @@ body {
 .burgerList {
   position: absolute;
   top: 10vh;
-  right: 0vw;
-  background-color: #002F67;
+  left: 50vw;
   height: 90vh;
   width: 50vw;
+}
+
+.magicBox {
+  width: 100%;
+  height: 100%;
+  background-color: #002F67;
   transform: translateX(100%); /* 100% */
   transition: 0.4s ease;
 }
